# ClawEar

./: .env.example  .gitignore  README.md  claude_desktop_config.json.example  clawear.example.toml  config.example.toml  pyproject.toml
docs/superpowers/specs/: 2026-04-21-javis-preferred-device-and-beeps-design.md
scripts/: migrate_timestamps.py
src/ble_explorer_mcp/: __main__.py  config.py  logging_setup.py  manager.py  models.py  server.py
src/ble_mcp/: __main__.py  config.py  decode.py  logging_setup.py  manager.py  server.py
src/clawear_mcp/: __init__.py  __main__.py  config.py  events.py  models.py  recording.py  server.py  sessions.py  transcripts.py
src/ear/: __init__.py  __main__.py  capture.py  cli.py  config.py  events_log.py  logging_setup.py  output.py  realtime_client.py  resampler.py  session.py  transcript.py  wav_writer.py
tests/: conftest.py  fake_bleak.py  test_config.py  test_decode.py  test_manager.py  test_tools.py
tests/clawear_mcp/: conftest.py  test_config.py  test_events.py  test_recording.py  test_server.py  test_sessions.py  test_transcripts.py
tests/ear/: conftest.py  fake_realtime.py  fake_sounddevice.py  test_capture.py  test_config.py  test_error_paths.py  test_events_log.py  test_output.py  test_realtime_client.py  test_resampler.py  test_session.py  test_transcript.py  test_wav_writer.py
tests/scripts/: test_migrate_timestamps.py
