[project]
name = "ble-explorer-mcp"
version = "0.1.0"
description = "MCP server exposing BLE scan/connect/read/write/notify to Claude Desktop"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "bleak>=0.22.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ble-explorer-mcp = "ble_explorer_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ble_explorer_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
