[project]
name = "ble-mcp"
version = "0.1.0"
description = "MCP server exposing BLE scan/connect/read/write/notify + ClawEar audio-pipeline CLI"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "bleak>=0.22.0",
    "pydantic>=2.6",
    "sounddevice>=0.4.7",
    "soxr>=0.5.0",
    "websockets>=12.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ble-mcp = "ble_mcp.__main__:main"
clawear = "ear.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ble_mcp", "src/ear"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
