[project]
name = "clawear-mcp"
version = "0.1.0"
description = "MCP server exposing ClawEar sessions (transcripts, events, recordings) + ear CLI for live capture"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.6",
    "sounddevice>=0.4.7",
    "soxr>=0.5.0",
    "websockets>=12.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
clawear = "ear.__main__:main"
clawear-mcp = "clawear_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawear_mcp", "src/ear"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
